--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,8 @@ services:
       - "443:443" # HTTPS
       - "443:443/udp" # HTTP/3
     volumes:
-      - ./:/app/public
+      - ./:/app
+      - ./webserver-configs/Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
     environment:
