--- a/webserver-configs/Caddyfile
+++ b/webserver-configs/Caddyfile
@@ -1,31 +1,66 @@
-# To use this file simply install caddy and run the command below from the root of your Grav site
-# Once running it will redirect http://localhost to https://localhost (new default for Caddy2)
-# More infromation here: https://caddyserver.com/docs/
-#
-# $ caddy run --config webserver-configs/Caddyfile
+{
+	{$CADDY_GLOBAL_OPTIONS}
 
-localhost
-encode gzip
-root * .
-file_server
+	frankenphp {
+		# worker /path/to/your/worker.php
+		{$FRANKENPHP_CONFIG}
+	}
+}
 
-php_fastcgi 127.0.0.1:9000
+{$CADDY_EXTRA_CONFIG}
 
-# Begin - Security
-# deny all direct access for these folders
-rewrite /(\.git|cache|bin|logs|backups|tests)/.* /403
+{$SERVER_NAME:localhost} {
+	# log {
+	# 	# Redact the authorization query parameter that can be set by Mercure
+	# 	format filter {
+	# 		request>uri query {
+	# 			replace authorization REDACTED
+	# 		}
+	# 	}
+	# }
 
-# deny running scripts inside core system folders
-rewrite /(system|vendor)/.*\.(txt|xml|md|html|htm|shtml|shtm|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$ /403
+	root * .
+	encode zstd br gzip
 
-# deny running scripts inside user folder
-rewrite /user/.*\.(txt|md|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$ /403
+	# Uncomment the following lines to enable Mercure and Vulcain modules
 
-# deny access to specific files in the root folder
-rewrite /(LICENSE\.txt|composer\.lock|composer\.json|nginx\.conf|web\.config|htaccess\.txt|\.htaccess) /403
+	# mercure {
+	#	# Transport to use (default to Bolt)
+	#	transport_url {$MERCURE_TRANSPORT_URL:bolt:///data/mercure.db}
+	#	# Publisher JWT key
+	#	publisher_jwt {env.MERCURE_PUBLISHER_JWT_KEY} {env.MERCURE_PUBLISHER_JWT_ALG}
+	#	# Subscriber JWT key
+	#	subscriber_jwt {env.MERCURE_SUBSCRIBER_JWT_KEY} {env.MERCURE_SUBSCRIBER_JWT_ALG}
+	#	# Allow anonymous subscribers (double-check that it's what you want)
+	#	anonymous
+	#	# Enable the subscription API (double-check that it's what you want)
+	#	subscriptions
+	#	# Extra directives
+	#	{$MERCURE_EXTRA_DIRECTIVES}
+	# }
 
-respond /403 403
-## End - Security
+	# vulcain
 
-# global rewrite should come last.
-try_files {path} {path}/ /index.php?_url={uri}&{query}
+	# Begin - Grav Security
+	# deny all direct access for these folders
+	rewrite /(\.git|cache|bin|logs|backups|tests)/.* /403
+
+	# deny running scripts inside core system folders
+	rewrite /(system|vendor)/.*\.(txt|xml|md|html|htm|shtml|shtm|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$ /403
+
+	# deny running scripts inside user folder
+	rewrite /user/.*\.(txt|md|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$ /403
+
+	# deny access to specific files in the root folder
+	rewrite /(LICENSE\.txt|composer\.lock|composer\.json|nginx\.conf|web\.config|htaccess\.txt|\.htaccess) /403
+
+	respond /403 403
+	## End - Grav Security
+
+	# global rewrite should come last.
+	try_files {path} {path}/ /index.php?_url={uri}&{query}
+
+	{$CADDY_SERVER_EXTRA_DIRECTIVES}
+
+	php_server
+}
