--- a/webserver-configs/Caddyfile
+++ b/webserver-configs/Caddyfile
@@ -42,17 +42,37 @@
 	# vulcain
 
 	# Begin - Grav Security
-	# deny all direct access for these folders
-	rewrite /(\.git|cache|bin|logs|backups|tests)/.* /403
+	@matches-restricted-folders {
+		# deny all direct access for these folders
+		path_regexp /(\.git|cache|bin|logs|backups?|tests|webserver-configs)/.*
+	}
 
-	# deny running scripts inside core system folders
-	rewrite /(system|vendor)/.*\.(txt|xml|md|html|htm|shtml|shtm|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$ /403
+	@matches-core-scripts {
+		# deny running scripts inside core system folders
+		path_regexp /(system|vendor)/.*\.(txt|xml|md|html|htm|shtml|shtm|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$
+	}
 
-	# deny running scripts inside user folder
-	rewrite /user/.*\.(txt|md|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$ /403
+	@matches-running-scripts {
+		# deny running scripts inside user folder
+		path_regexp /user/.*\.(txt|md|yaml|yml|php|php2|php3|php4|php5|phar|phtml|pl|py|cgi|twig|sh|bat)$
+	}
 
-	# deny access to specific files in the root folder
-	rewrite /(LICENSE\.txt|composer\.lock|composer\.json|nginx\.conf|web\.config|htaccess\.txt|\.htaccess) /403
+	@matches-restricted-root-files {
+		# deny access to all root files except few
+		# path_regexp /(LICENSE\.txt|compose.*|nginx\.conf|web\.config|htaccess\.txt|\.htaccess)
+
+		# If the request is pointing to a file
+		file {path}
+		# and the file is in the root folder 
+		path_regexp ^/[^/]+$
+		# but does not match the listed accessible files [index.php, robot.txt]
+		not path_regexp /(index.php|robots.txt)
+	}
+
+	rewrite @matches-restricted-folders 403
+	rewrite @matches-core-scripts 403
+	rewrite @matches-running-scripts 403
+	rewrite @matches-restricted-root-files 403
 
 	respond /403 403
 	## End - Grav Security
