--- a/compose.yaml
+++ b/compose.yaml
@@ -11,7 +11,7 @@ services:
       # If you installed grav into a directory that is not named "grav"
       # Then change "./grav:/app" to "./your-grav-directory-name:/app" 
       - ./grav:/app
-      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
+      - ./Caddyfile:/etc/caddy/Caddyfile
       - ./gpm.json:/app/gpm.json
       - ./gpm.run:/app/gpm.run
       - caddy_data:/data
