--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -9,4 +9,4 @@ services:
       # Used internally by caddy
       SERVER_NAME: localhost:80, 127.0.0.1:80
     ports:
-      - "${HTTP_PORT:-7000}:80"
+      - "${LOCAL_HTTP_PORT:-7000}:80"
