--- a/compose.yaml
+++ b/compose.yaml
@@ -1,22 +1,23 @@
 services:
   php:
     build: .
-    container_name: grav-frankenphp
+    image: ${IMAGE_PREFIX:-}grav-frankenphp
+    container_name: ${GRAV_CONTAINER_NAME:-}
     restart: unless-stopped
     ports:
-      - "80:80" # HTTP
-      - "443:443" # HTTPS
-      - "443:443/udp" # HTTP/3
+      - "${HTTP_PORT:-80}:80" # HTTP
+      - "${HTTPS_PORT:-443}:443" # HTTPS
+      - "${HTTPS_PORT:-443}:443/udp" # HTTP/3
     volumes:
       # If you installed grav into a directory that is not named "grav"
       # Then change "./grav:/app" to "./your-grav-directory-name:/app" 
-      - ./grav:/app
+      - ./${GRAV_DIRECTORY:-grav}:/app
       - ./caddy:/etc/caddy
       - caddy_data:/data
       - caddy_config:/config
     environment:
       # e.g domain.com, sub.domain.com
-      SERVER_NAME: localhost
+      SERVER_NAME: ${SERVER_NAME:-localhost}
 
 # Volumes needed for Caddy certificates and configuration
 volumes:
