--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -8,5 +8,6 @@ services:
         auto_https disable_redirects
       # Used internally by caddy
       SERVER_NAME: localhost:80, 127.0.0.1:80
+      GRAV_ENVIRONMENT: development
     ports: !override
       - "${LOCAL_HTTP_PORT:-7000}:80"
